# babeltrace2-rust-plugin

./: .gitignore  Cargo.toml  README.md  build.rs
src/: binding_additions.rs  bt2.rs  bt2_additions.rs  bt2_doc.rs  lib.rs  wrapper.c  wrapper.h
src/tests/: code_gen.rs
